--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
     <h2>누가 몇번 선택됐나요?</h2>
     <ul>
-        이름을 입력하거나, '없음'이라고 입력하여 조회해 보세요!
+        같이 산책하고 싶은 분의 이름을 입력하거나, 없다면 '없음'이라고 입력하여 조회해 보세요!
     </ul>
 </body>
 </html>
